--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,7 @@ p {
 
 
 .lottiefiles {
-    background-color: lightgrey;
-    padding: 20px;
+    background-color: var(--accentColor) !important;
+    padding: 25px;
+    color: #ffffff !important
 }
