--- a/components/footer.html
+++ b/components/footer.html
@@ -6,38 +6,64 @@
         <div class="col col-12 col-xs-12 col-sm-6 col-md-3 col-lg-3 col-xl-3 col-xxl-3">
           <h3>Contact Information</h3>
           <ul>
-            <li>Link one</li>
-            <li>Link two</li>
-            <li>Link three</li>
-            <li>Link four</li>
+            <li><a href="#">Email Us</a></li>
+            <li><a href="#">Visit Locations</a></li>
+            <li><a href="#">Phone Directory</a></li>
+            <li><a href="#">Support Form</a></li>
           </ul>
         </div>
+
         <div class="col col-12 col-xs-12 col-sm-6 col-md-3 col-lg-3 col-xl-3 col-xxl-3">
           <h3>Legal Information</h3>
           <ul>
-            <li>Link one</li>
-            <li>Link two</li>
-            <li>Link three</li>
-            <li>Link four</li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms of Service</a></li>
+            <li><a href="#">Copyright Notice</a></li>
+            <li><a href="#">Accessibility Statement</a></li>
           </ul>
         </div>
+
         <div class="col col-12 col-xs-12 col-sm-6 col-md-3 col-lg-3 col-xl-3 col-xxl-3">
           <h3>Sales</h3>
           <ul>
-            <li>Link one</li>
-            <li>Link two</li>
-            <li>Link three</li>
-            <li>Link four</li>
+            <li><a href="#">Book Donations</a></li>
+            <li><a href="#">Purchase Kits</a></li>
+            <li><a href="#">Sponsorships</a></li>
+            <li><a href="#">Merch Store</a></li>
           </ul>
         </div>
+
         <div class="col col-12 col-xs-12 col-sm-6 col-md-3 col-lg-3 col-xl-3 col-xxl-3">
           <h3>Resources</h3>
           <ul>
-            <li>Link one</li>
-            <li>Link two</li>
-            <li>Link three</li>
-            <li>Link four</li>
+            <li><a href="#">Find a Library</a></li>
+            <li><a href="#">Start Your Own</a></li>
+            <li><a href="#">Community Events</a></li>
+            <li><a href="#">Volunteer Info</a></li>
           </ul>
+        </div>
+      </div>
+
+      <!-- Begin Social Media Row -->
+      <div class="row mt-4">
+        <div class="col text-center">
+          <a href="#" class="text-decoration-none me-3" aria-label="Facebook">
+            <i class="fab fa-facebook fa-lg"></i>
+          </a>
+          <a href="#" class="text-decoration-none me-3" aria-label="Instagram">
+            <i class="fab fa-instagram fa-lg"></i>
+          </a>
+          <a href="#" class="text-decoration-none" aria-label="X (Twitter)">
+            <i class="fab fa-x-twitter fa-lg"></i>
+          </a>
+        </div>
+      </div>
+      <!-- End Social Media Row -->
+
+      <!-- Optional Copyright -->
+      <div class="row mt-3">
+        <div class="col text-center small">
+          <p class="mb-0">&copy; 2025 Free Little Library. All rights reserved.</p>
         </div>
       </div>
     </div>
