--- a/components/footer.html
+++ b/components/footer.html
@@ -1,50 +1,45 @@
 <footer>
-  <!-- Begin Footer Row -->
   <div class="container-fluid blinn-footer-container">
     <div class="container">
       <div class="row">
-        <div class="col col-12 col-xs-12 col-sm-6 col-md-3 col-lg-3 col-xl-3 col-xxl-3">
-          <h3>Contact Information</h3>
-          <ul>
-            <li><a href="#">Email Us</a></li>
-            <li><a href="#">Visit Locations</a></li>
-            <li><a href="#">Phone Directory</a></li>
-            <li><a href="#">Support Form</a></li>
-          </ul>
-        </div>
-
-        <div class="col col-12 col-xs-12 col-sm-6 col-md-3 col-lg-3 col-xl-3 col-xxl-3">
-          <h3>Legal Information</h3>
-          <ul>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms of Service</a></li>
-            <li><a href="#">Copyright Notice</a></li>
-            <li><a href="#">Accessibility Statement</a></li>
-          </ul>
-        </div>
-
-        <div class="col col-12 col-xs-12 col-sm-6 col-md-3 col-lg-3 col-xl-3 col-xxl-3">
-          <h3>Sales</h3>
-          <ul>
-            <li><a href="#">Book Donations</a></li>
-            <li><a href="#">Purchase Kits</a></li>
-            <li><a href="#">Sponsorships</a></li>
-            <li><a href="#">Merch Store</a></li>
-          </ul>
-        </div>
-
-        <div class="col col-12 col-xs-12 col-sm-6 col-md-3 col-lg-3 col-xl-3 col-xxl-3">
-          <h3>Resources</h3>
+        <div class="col col-12 col-sm-6 col-md-3">
+          <h3>Connect With Us</h3>
           <ul>
             <li><a href="#">Find a Library</a></li>
-            <li><a href="#">Start Your Own</a></li>
-            <li><a href="#">Community Events</a></li>
-            <li><a href="#">Volunteer Info</a></li>
+            <li><a href="#">Contact Volunteers</a></li>
+            <li><a href="#">Submit a Story</a></li>
+            <li><a href="#">Request Support</a></li>
+          </ul>
+        </div>
+        <div class="col col-12 col-sm-6 col-md-3">
+          <h3>Get Involved</h3>
+          <ul>
+            <li><a href="#">Start Your Own Library</a></li>
+            <li><a href="#">Donate Books</a></li>
+            <li><a href="#">Host an Event</a></li>
+            <li><a href="#">Volunteer Opportunities</a></li>
+          </ul>
+        </div>
+        <div class="col col-12 col-sm-6 col-md-3">
+          <h3>Resources</h3>
+          <ul>
+            <li><a href="#">Library Map</a></li>
+            <li><a href="#">Building Guide</a></li>
+            <li><a href="#">Community Toolkit</a></li>
+            <li><a href="#">Media Gallery</a></li>
+          </ul>
+        </div>
+        <div class="col col-12 col-sm-6 col-md-3">
+          <h3>About</h3>
+          <ul>
+            <li><a href="#">Our Story</a></li>
+            <li><a href="#">Mission & Values</a></li>
+            <li><a href="#">Partners</a></li>
+            <li><a href="#">FAQs</a></li>
           </ul>
         </div>
       </div>
 
-      <!-- Begin Social Media Row -->
       <div class="row mt-4">
         <div class="col text-center">
           <a href="#" class="text-decoration-none me-3" aria-label="Facebook">
@@ -58,9 +53,7 @@
           </a>
         </div>
       </div>
-      <!-- End Social Media Row -->
 
-      <!-- Optional Copyright -->
       <div class="row mt-3">
         <div class="col text-center small">
           <p class="mb-0">&copy; 2025 Free Little Library. All rights reserved.</p>
@@ -68,5 +61,4 @@
       </div>
     </div>
   </div>
-  <!-- End Footer Row -->
 </footer>
