--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ p {
 
 .paragraph-one {
     position: relative;
-    margin-top: -80px;
+    /*margin-top: -80px; */
     font-family: var(--fontFamily) !important;
 }
 
