--- a/css/styles.css
+++ b/css/styles.css
@@ -82,3 +82,9 @@ p {
     margin-top: 40px;
     margin-bottom: 40px;
 }
+
+
+/*webaim contrast errors*/
+.carousel-control-prev-icon, .carousel-control-next-icon {
+    background-color: #000000 !important;
+}
