--- a/css/styles.css
+++ b/css/styles.css
@@ -84,9 +84,9 @@ p {
 }
 
 
-/*webaim contrast errors*/
+/*webaim contrast errors
 .carousel-control-prev, .carousel-control-next {
     background-color: #000000 !important;
     width: 100px;
     height: 100px;
-}
+}*/
