--- a/css/styles.css
+++ b/css/styles.css
@@ -83,10 +83,13 @@ p {
     margin-bottom: 40px;
 }
 
+.lottiefiles h2 {
+    color: #ffffff !important;
+}
 
-/*webaim contrast errors
+/*webaim contrast errors*/
 .carousel-control-prev, .carousel-control-next {
     background-color: #000000 !important;
     width: 100px;
     height: 100px;
-}*/
+}
