--- a/css/styles.css
+++ b/css/styles.css
@@ -87,12 +87,23 @@ p {
     color: #ffffff !important;
 }
 
-/*webaim contrast errors*/
+/*webaim contrast errors
 .carousel-control-prev, .carousel-control-next {
     background-color: #000000 !important;
     width: 100px;
     height: 100px;
+}*/
+
+
+.carousel-control-prev, .carousel-control-next {
+    background-color: #000000 !important;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    position: absolute;
+    top: 33%;
 }
+
 
 .top-intro {
     padding-top: 40px;
